[package]
name = "smcurser"
version = "0.1.2"
authors = ["Ian Welker <iandwelker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
crossterm = "0.19.0"
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11.2", features = ["native-tls", "blocking", "gzip", "multipart"] }
native-tls = "0.2.7"
textwrap = "0.13.4"
unicode-segmentation = "1.7.1"
chrono = "0.4.19"
tungstenite = { version = "0.13.0", features = ["native-tls"] }
url = "2.2.1"
open = "1.6.0"
toml = "0.5.8"
dirs = "3.0.1"
notify-rust = { version = "4.3.0", features = ["image"] }
unicode-width = "0.1.8"
