[package]
name = "smcurser"
version = "0.1.2"
authors = ["Ian Welker <iandwelker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
crossterm = "0.19.0"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
serde_json = "1.0.64"
textwrap = "0.13.4"
unicode-segmentation = "1.7.1"
chrono = "0.4.19"
toml = "0.5.8"
dirs = "3.0.2"
notify-rust = { version = "4.5.2", features = ["image"] }
unicode-width = "0.1.8"
sdk = { package = "smserver-rs-sdk", path = "./smserver-rs-sdk" }
tokio = { version = "1.6.0", features = ["full"] }
anyhow = "1.0.40"
futures = "0.3.15"
futures-locks = "0.6"
